# Augustine-citator

./: .gitignore  README.md  manifest.local.xml  manifest.xml  package-lock.json  package.json  passages.public.json  server.js  taskpane.html
.github/workflows/: pages.yml
appsource/: PRIVACY-POLICY.md  README.md  SUBMISSION-CHECKLIST.md  TERMS-OF-USE.md  store-listing.md  test-instructions.md
installer/: AugustinusCitator.iss  README.md  build-manifest.ps1  build-manifest.sh
pdf2epub/: cli.mjs  converter.html
pdf2epub/examples/: La voix intérieure de l'amour - Henri Nouwen.epub
pdf2epub/lib/: core.mjs  zip.mjs
scripts/: render_md.py
stylometry-ai/: .gitignore  README.md  pyproject.toml  requirements.txt
stylometry-ai/docs/: A_FAIRE_DEMAIN.md  RESULTATS_FR.md  SOURCES_LIBRES.md
stylometry-ai/examples/sample_texts/: ai_like_en.txt  human_en.txt
stylometry-ai/notebooks/: stylometry_ai_tutorial.ipynb
stylometry-ai/scripts/: ingest_corpus.py
stylometry-ai/styloscan/: __init__.py  cli.py  features.py  languages.py  model.py  report.py  scoring.py  viz.py
stylometry-ai/tests/: test_features.py
stylometry-ai/web/: app.py
stylometry-ai/web/templates/: index.html
